new changes to display student correctly

--- a/SchoolAngular/ClientApp/src/app/student/student.component.html
+++ b/SchoolAngular/ClientApp/src/app/student/student.component.html
@@ -3,6 +3,8 @@
 
 <ul class="heroes">
   <li *ngFor="let student of students">
-    <span class="badge">{{student.PersonId}}</span> {{student.PersonId}}
+    <span class="badge">{{student.personId}}</span> {{student.firstName}}, {{student.lastName}}
   </li>
 </ul>
+
+
