--- a/SchoolAngular/ClientApp/src/app/home/home.component.html
+++ b/SchoolAngular/ClientApp/src/app/home/home.component.html
@@ -1,10 +1,16 @@
-<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
+<h4>Welcome to SchoolApp</h4>
+<p>This application template provides a quick and convenient way to create ASP.NET Core 3 / Angular 8 applications</p>
+<h5>Technologies</h5>
 <ul>
-  <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-  <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-  <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
+  <li>Template pages with <a href="https://angular.io" target="_blank" rel="nofollow">Angular8</a> and <a href="https://www.typescriptlang.org" target="_blank" rel="nofollow">TypeScript</a></li>
+  <li>RESTful API Backend using <a href="https://docs.microsoft.com/en-us/aspnet/core" target="_blank" rel="nofollow">ASP.NET Core 3</a> MVC Web API</li>
+  <li>Database using <a href="https://docs.microsoft.com/en-us/ef/core" target="_blank" rel="nofollow">Entity Framework Core</a></li>
+  <li>Authentication based on <a href="http://docs.identityserver.io/en/release" target="_blank" rel="nofollow">IdentityServer4</a> and <a href="https://docs.microsoft.com/en-us/aspnet/core/security/authentication/identity-configuration?tabs=aspnetcore2x" target="_blank" rel="nofollow">ASP.NET Core Identity</a></li>
+  <li>API Documentation using <a href="https://swagger.io" target="_blank" rel="nofollow">Swagger</a></li>
+  <li>Client-side built on <a href="https://cli.angular.io" target="_blank" rel="nofollow">Angular CLI</a></li>
+  <li>Theming using <a href="https://getbootstrap.com" target="_blank" rel="nofollow">Bootstrap 4</a> with <a href="https://bootswatch.com" target="_blank" rel="nofollow">Bootswatch</a></li>
 </ul>
+
 <p>To help you get started, we've also set up:</p>
 <ul>
   <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
